[package]
name = "jose-jwk"
version = "0.2.0-pre"
authors = ["RustCrypto Developers"]
license = "Apache-2.0 OR MIT"
description = """
Pure Rust implementation of the JSON Web Key (JWK) component of the
Javascript Object Signing and Encryption (JOSE) specification as described in
RFC7517
"""
documentation = "https://docs.rs/jose-jwk"
homepage = "https://github.com/RustCrypto/JOSE/tree/master/jose-jwk"
repository = "https://github.com/RustCrypto/JOSE"
categories = ["cryptography", "data-structures", "encoding", "parser-implementations"]
keywords = ["json", "jose"]
readme = "README.md"
edition = "2024"
rust-version = "1.85"

[features]
default = ["crypto"]
crypto = ["p256", "p384", "p521", "k256", "rsa"]
legacy = ["dep:base64ct", "dep:elliptic-curve", "dep:serde_json", "dep:serdect", "dep:subtle"]

[dependencies]
jose-b64 = { path = "../jose-b64", default-features = false, features = ["secret"] }
jose-jwa = { path = "../jose-jwa" }
serde = { version = "1", default-features = false, features = ["alloc", "derive"] }
zeroize = { version = "1.8.1", default-features = false, features = ["alloc"] }

# optional dependencies
p256 = { version = "0.14.0-pre.9", default-features = false, optional = true, features = ["arithmetic"] }
p384 = { version = "0.14.0-pre.9", default-features = false, optional = true, features = ["arithmetic"] }
p521 = { version = "0.14.0-pre.9", default-features = false, optional = true, features = ["arithmetic"] }
k256 = { version = "0.14.0-pre.9", default-features = false, optional = true, features = ["arithmetic"] }
rsa = { version = "0.10.0-rc.6", default-features = false, optional = true }
url = { version = "2.4.1", default-features = false, optional = true, features = ["serde"] }

# legacy dependencies
base64ct = { version = "1", optional = true, default-features = false, features = ["alloc"] }
elliptic-curve = { version = "0.14.0-rc.4", optional = true, default-features = false, features = ["arithmetic", "sec1"] }
serdect = { version = "0.2", optional = true, default-features = false, features = ["alloc"] }
serde_json = { version = "1.0.121", optional = true, default-features = false, features = ["alloc"] }
subtle = { version = "2.6", optional = true, default-features = false }

[dev-dependencies]
elliptic-curve = { version = "0.14.0-rc.4", default-features = false, features = ["dev"] }
serde_json = "1.0.121"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
