[package]
name = "jose-jws"
version = "0.2.0-pre"
authors = ["RustCrypto Developers"]
license = "Apache-2.0 OR MIT"
description = """
Pure Rust implementation of the JSON Web Signature (JWS) component of the
Javascript Object Signing and Encryption (JOSE) specification as described in
RFC7515
"""
documentation = "https://docs.rs/jose-jws"
homepage = "https://github.com/RustCrypto/JOSE/tree/master/jose-jws"
repository = "https://github.com/RustCrypto/JOSE"
categories = ["cryptography", "data-structures", "encoding", "parser-implementations"]
keywords = ["json", "jose"]
readme = "README.md"
edition = "2024"
rust-version = "1.85"

[dependencies]
jose-b64 = { path = "../jose-b64", default-features = false, features = ["json"] }
jose-jwa = { path = "../jose-jwa" }
jose-jwk = { path = "../jose-jwk", default-features = false }
serde = { version = "1.0.185", default-features = false, features = ["alloc", "derive"] }
serde_json = { version = "1.0.96", default-features = false }
rand_core = { version = "0.9", default-features = false }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
